# aigcw

./: .gitignore  Cargo.toml  README.md  TESTING.md
.github/workflows/: release.yml
docs/plans/: 2026-01-29-native-git-passthrough-design.md  2026-01-29-native-git-passthrough.md
scripts/: install.sh
src/: app_config.rs  commit_types.rs  customer_llm_backend.rs  git_utils.rs  llm.rs  main.rs
