[package]
name = "gcw"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.0"
derive-new = "0.7.0"
rllm = "1.1.7"
tokio = { version="1.43.0", features = ["test"]}
