[package]
name = "gcw"
version = "0.1.0"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
clap = { version = "4.4.0", features = ["derive"] }
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.0"
derive-new = "0.7.0"
rllm = { version="1.1.7" , features = ["ollama"]}
tokio = { version="1.43.0", features = ["full"]}
reqwest = "0.12.12"
serde_json = "1.0.149"
directories = "6.0.0"
config = "0.15.11"
dirs = "6.0.0"
